# accern-data-client

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  forgottenformat.sh  mypy.ini  package.json  pyi.sh  pyproject.toml  requirements.lint.txt  requirements.txt  run_pytest.sh  setup.cfg  setup.py  sonar-project.properties  version.sh
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: python-app.yml
coverage/: coverage.sh
samples/: Accern Data Client Tutorial.ipynb
stubs/IPython/: __init__.pyi  display.pyi
stubs/pandas/: __init__.pyi  _typing.pyi  _version.pyi  conftest.pyi  testing.pyi
stubs/pandas/_config/: __init__.pyi  config.pyi  dates.pyi  display.pyi  localization.pyi
stubs/pandas/_libs/: __init__.pyi  indexing.pyi  internals.pyi  interval.pyi
stubs/pandas/api/: __init__.pyi
stubs/pandas/arrays/: __init__.pyi
stubs/pandas/compat/: __init__.pyi  _optional.pyi  chainmap.pyi  pickle_compat.pyi
stubs/pandas/core/: __init__.pyi  accessor.pyi  algorithms.pyi  api.pyi  apply.pyi  base.pyi  common.pyi  config_init.pyi  frame.pyi  generic.pyi  index.pyi  indexers.pyi  indexing.pyi  missing.pyi  nanops.pyi  resample.pyi  series.pyi  sorting.pyi  strings.pyi  window.pyi
stubs/pandas/errors/: __init__.pyi
stubs/pandas/io/: api.pyi  (+16 more)
stubs/pandas__/: __init__.pyi  _typing.pyi  conftest.pyi  testing.pyi
stubs/setuptools/: __init__.pyi
stubs/tqdm/: __init__.pyi  _main.pyi  _monitor.pyi  _tqdm.pyi  _tqdm_gui.pyi  _tqdm_notebook.pyi  _tqdm_pandas.pyi  _utils.pyi  asyncio.pyi  auto.pyi  cli.pyi  dask.pyi  gui.pyi  keras.pyi  notebook.pyi  rich.pyi  std.pyi  tk.pyi  utils.pyi
tests/: __main__.py  data_sanitization.py  test_by_date.py  test_bydate.py  test_consistency.py  test_data_iterator.py  test_filters.py  test_inconsistent_fields.py  test_modes.py  test_timestamps.py  utils.py
tests/data/: data-2022.csv
tests/data_mini/: data-2022.csv  data-2022.json
tests/data_with_missing_fields/: data-2022.csv  data-2022.json
(+1312 files in other folders)
