[metadata]
name = accern_data
version = attr: accern_data.__version__
description = Client for consuming Accern data feeds.
long_description = file: README.md
url = https://github.com/Accern/accern-data-client
author = Accern Corp.
author_email = ankur.goswami@accern.com
keywords = ...
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3

[options]
package_dir =
    = packages/python
packages = find:
python_requires = >=3.6
install_requires =
    pandas>=1.4.1
    requests>=2.27.1
    typing-extensions>=4.0.1

[options.packages.find]
where = packages/python

[options.package_data]
    accern_data =
        py.typed
