[metadata]
name = accern_data
version = attr: accern_data.__version__
description = Client for consuming Accern data feeds.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Accern/accern-data-client
author = Accern Corp.
author_email = datascience@accern.com
keywords = api client data feed NLP processing
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3

[options]
package_dir =
    = packages/python
packages = find:
python_requires = >=3.7.1
install_requires =
    pandas>=1.3.0
    requests>=2.27.1
    tqdm~=4.64.0
    typing-extensions>=4.3.0

[options.packages.find]
where = packages/python

[options.package_data]
    accern_data =
        py.typed

[options.data_files]
    accern_data = tests/data/data-2022.*
